--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -145,8 +145,52 @@
 
         <RelativeLayout
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="6"
             android:layout_width="wrap_content">
+
+            <TextView
+                android:text="@string/daily_steps"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:id="@+id/textViewDailySteps"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="18sp" />
+
+            <TextView
+                android:text="@string/height_today"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textViewDailySteps"
+                android:layout_alignStart="@+id/textViewDailySteps"
+                android:layout_marginTop="20dp"
+                android:id="@+id/textViewDailyHeight"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="18sp" />
+
+            <TextView
+                android:text="@string/zero"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewDailyStepsNum"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="18sp"
+                android:layout_alignBaseline="@+id/textViewDailySteps"
+                android:layout_alignBottom="@+id/textViewDailySteps"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="17dp" />
+
+            <TextView
+                android:text="@string/zero_m"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewDailyHeightNum"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="18sp"
+                android:layout_alignBaseline="@+id/textViewDailyHeight"
+                android:layout_alignBottom="@+id/textViewDailyHeight"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="17dp" />
 
             <Button
                 android:text="@string/button_reset_all"
