--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
+        android:title="@string/pref_cat_target"
+        android:key="pref_cat_target">
+        <EditTextPreference
+            android:key="pref_target_steps"
+            android:title="@string/steps"
+            android:defaultValue="10000"
+            android:numeric="integer" />
+        <EditTextPreference
+            android:key="pref_target_height"
+            android:title="@string/height"
+            android:defaultValue="100"
+            android:numeric="integer" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/pref_cat_stat"
         android:key="pref_cat_stat">
         <Preference
