--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -149,24 +149,44 @@
         android:layout_below="@+id/textViewError"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:text="@string/daily_steps"
+    <ProgressBar
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonReset"
         android:layout_alignStart="@+id/buttonReset"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
+        android:id="@+id/progressBarSteps"
+        android:layout_alignEnd="@+id/textViewStepO" />
+
+    <TextView
+        android:text="@string/daily_steps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/progressBarSteps"
+        android:layout_alignStart="@+id/progressBarSteps"
+        android:layout_marginTop="0dp"
         android:id="@+id/textViewDailySteps"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="18sp" />
+
+    <ProgressBar
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewDailySteps"
+        android:layout_alignStart="@+id/textViewDailySteps"
+        android:layout_marginTop="10dp"
+        android:id="@+id/progressBarHeight"
+        android:layout_alignEnd="@+id/textViewStepO" />
 
     <TextView
         android:text="@string/height_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewDailySteps"
-        android:layout_alignStart="@+id/textViewDailySteps"
-        android:layout_marginTop="20dp"
+        android:layout_below="@+id/progressBarHeight"
+        android:layout_alignStart="@+id/progressBarHeight"
+        android:layout_marginTop="0dp"
         android:id="@+id/textViewDailyHeight"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="18sp" />
