Feature release: - Change design, esp. progress bar - Update daily values on Resume (including write of statistics data) - save last regular statistic of day with 24:00 instead of 0:00 on next day - -1-values will be saved in statistics file if app is used but not measured - 0-values are not accepted in max. files to keep - preference will not be saved

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -24,10 +24,11 @@
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_menu_set_as"
+        app:srcCompat="?attr/actionModePasteDrawable"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="bottom|right"
-        android:layout_gravity="top|left" />
+        android:layout_gravity="top|left"
+        android:tint="@android:color/darker_gray" />
 
 
 
