--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,5 +3,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="grmpl.mk.stepandheightcounter.MainActivity">
     <item android:id="@+id/action_settings" android:orderInCategory="100"
-        android:title="@string/action_settings" app:showAsAction="ifRoom" android:icon="@drawable/ic_settings" />
+        android:title="@string/action_settings" app:showAsAction="ifRoom" android:icon="@drawable/ic_settings2" />
 </menu>
