--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/buttonStart"
                 android:layout_marginTop="0dp"
                 android:textAlignment="center"
-                style="@android:style/Widget.Holo.Button"
+                style="@android:style/Widget.Material.Button"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"/>
 
@@ -50,55 +50,50 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewSteps"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:layout_marginStart="10dp"
                 android:layout_alignParentStart="true"
                 android:layout_below="@id/textViewError"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="@dimen/default_gap"/>
 
             <TextView
                 android:text="@string/zero"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewStepO"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:layout_alignBaseline="@+id/textViewSteps"
                 android:layout_alignBottom="@+id/textViewSteps"
-                android:layout_alignParentEnd="true"
-                android:textSize="18sp" />
+                android:layout_alignParentEnd="true" />
 
             <TextView
                 android:text="@string/height_actual"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewHeight"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:layout_marginTop="8dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
+                android:layout_marginTop="@dimen/default_gap"
                 android:layout_below="@+id/textViewSteps"
-                android:layout_alignStart="@+id/textViewSteps"
-                android:textSize="18sp" />
+                android:layout_alignStart="@+id/textViewSteps" />
 
             <TextView
                 android:text="@string/height_init1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewHeightO"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:layout_alignBaseline="@+id/textViewHeight"
                 android:layout_alignBottom="@+id/textViewHeight"
-                android:layout_alignParentEnd="true"
-                android:textSize="18sp" />
+                android:layout_alignParentEnd="true" />
 
             <TextView
                 android:text="@string/height_accumulated"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewHeightacc"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:layout_below="@id/textViewHeight"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/default_gap"
                 android:layout_alignStart="@+id/textViewSteps" />
 
             <TextView
@@ -106,8 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewHeightaccO"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
                 android:layout_alignBaseline="@id/textViewHeightacc"
                 android:layout_alignBottom="@+id/textViewHeightacc"
                 android:layout_alignParentEnd="true" />
@@ -118,12 +112,11 @@
                 android:inputType="number"
                 android:ems="10"
                 android:id="@+id/editTextHeightcal"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                style="@style/Widget.AppCompat.EditText"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                style="@android:style/Widget.Material.EditText"
                 android:visibility="visible"
                 android:background="@android:drawable/editbox_background"
                 android:selectAllOnFocus="false"
-                android:textSize="18sp"
                 android:hint="@string/height_m"
                 android:maxLines="1"
                 android:layout_alignStart="@+id/textViewSteps"
@@ -135,7 +128,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/buttonCalibrate"
-                style="@android:style/Widget.Holo.Button"
+                style="@android:style/Widget.Material.Button"
                 android:onClick="calibrateHeight"
                 android:layout_alignBaseline="@id/editTextHeightcal"
                 android:layout_toEndOf="@id/editTextHeightcal"
@@ -155,7 +148,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:id="@+id/progressBarSteps"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:progressBackgroundTint="@android:color/darker_gray"
+                android:max="100" />
 
             <TextView
                 android:text="@string/daily_steps"
@@ -163,8 +158,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/progressBarSteps"
                 android:id="@+id/textViewDailySteps"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp" />
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="?android:attr/textColorPrimary" />
 
             <ProgressBar
                 style="@android:style/Widget.ProgressBar.Horizontal"
@@ -172,9 +167,11 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textViewDailySteps"
                 android:layout_alignStart="@+id/textViewDailySteps"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/default_gap"
                 android:id="@+id/progressBarHeight"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:progressBackgroundTint="@android:color/darker_gray"
+                android:max="100" />
 
             <TextView
                 android:text="@string/height_today"
@@ -182,34 +179,31 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/progressBarHeight"
                 android:layout_alignStart="@+id/progressBarHeight"
-                android:layout_marginTop="0dp"
                 android:id="@+id/textViewDailyHeight"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp" />
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="?android:attr/textColorPrimary" />
 
             <TextView
                 android:text="@string/zero"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewDailyStepsNum"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp"
                 android:layout_alignBaseline="@+id/textViewDailySteps"
                 android:layout_alignBottom="@+id/textViewDailySteps"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="17dp" />
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="?android:attr/textColorPrimary"/>
 
             <TextView
                 android:text="@string/zero_m"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewDailyHeightNum"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="18sp"
                 android:layout_alignBaseline="@+id/textViewDailyHeight"
                 android:layout_alignBottom="@+id/textViewDailyHeight"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="17dp" />
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="?android:attr/textColorPrimary"/>
 
             <Button
                 android:text="@string/button_reset_all"
@@ -217,7 +211,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/buttonReset"
                 android:onClick="resetData"
-                style="@android:style/Widget.Holo.Button"
+                style="@android:style/Widget.Material.Button"
                 android:layout_marginEnd="50dp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"/>
@@ -227,7 +221,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView"
-                android:textSize="16sp"
                 android:layout_below="@id/buttonReset"
                 android:layout_marginTop="5dp"
                 android:layout_centerHorizontal="true"
