--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -14,19 +14,21 @@
         <item>@string/pref_stat_detail_steps</item>
         <item>@string/pref_stat_detail_start</item>
         <item>@string/pref_stat_detail_stop</item>
+        <item>@string/pref_stat_detail_calibration</item>
+        <item>@string/pref_stat_detail_reset</item>
         <item>@string/pref_stat_detail_marker</item>
     </string-array>
     <string-array name="detail_stat_values">
-        <item>1</item>
-        <item>2</item>
-        <item>4</item>
-        <item>8</item>
+        <item>e</item>
+        <item>a</item>
+        <item>o</item>
+        <item>c</item>
+        <item>r</item>
+        <item>m</item>
     </string-array>
     <string-array name="detail_stat_default_values">
-        <item>8</item>
+        <item>m</item>
     </string-array>
-    <string name="pref_stat_detail_steps">Step events</string>
-    <string name="pref_stat_detail_start">Start measurement</string>
-    <string name="pref_stat_detail_stop">Stop measurement</string>
-    <string name="pref_stat_detail_marker">Marker</string>
+    <string name="pref_stat_detail_calibration">Height calibration</string>
+    <string name="pref_stat_detail_reset">Resets</string>
 </resources>
