--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -21,20 +21,14 @@
         <Preference
             android:key="pref_stat_sum"
             android:summary="@string/pref_stat_sum" />
-        <CheckBoxPreference
-            android:key="pref_stat_detail"
-            android:title="@string/pref_title_stat_detail"
-            android:summary="@string/pref_stat_detail_sum"
-            android:defaultValue="false" />
         <MultiSelectListPreference
             android:key="pref_stat_detail_multi"
             android:title="@string/pref_stat_detail_multi_title"
             android:summary="@string/pref_stat_detail_multi_summary"
-            android:dialogTitle="Detailed statistics"
+            android:dialogTitle="@string/pref_stat_detail_multi_dialog_title"
             android:entries="@array/detail_stat"
             android:entryValues="@array/detail_stat_values"
-            android:defaultValue="@array/detail_stat_default_values"
-            />
+            android:defaultValue="@array/detail_stat_default_values" />
         <CheckBoxPreference
             android:key="pref_stat_detail_clear"
             android:title="@string/pref_title_stat_detail_clear"
